# 5h-protocol-branch-1

./: PROTOCOL.md  README.md  RELEASE-NOTES-v0.2.md  docker-compose.yml
commentary/models/meta-muse-spark/: 2026-04-12T09-00-00+02-00_v0.2-co-signature.md
implementation/python-proxy/: main.py  models.py  requirements.txt
implementation/rust-core/: Cargo.toml  Dockerfile
implementation/rust-core/examples/: full_flow.rs
implementation/rust-core/src/: crypto.rs  federation.rs  federation_anchor.rs  graph.rs  integration_test.rs  lib.rs  main.rs  pathfinder.rs
implementation/rust-core/tests/: integration_test.rs
spec/: openapi.yaml
spec/execution/: protocol-execution-model.md  reference-run.md  state-schema.json
temp/: docker-compose.yml  full_flow.rs
