[package]
name = "five-h-core"
version = "0.2.0"
edition = "2021"
authors = ["Grok (xAI)"]

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"          # ← added
sha2 = { version = "0.10", features = ["std"] }

[[example]]
name = "full_flow"
path = "examples/full_flow.rs"
